--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=476,132
+Pos=653,130
 Size=358,357
 Collapsed=0
 
@@ -45,16 +45,16 @@ Size=177,96
 Collapsed=0
 
 [Window][Camera Mode]
-Pos=866,572
+Pos=782,404
 Size=498,427
 Collapsed=0
-DockId=0x0000000C,2
+DockId=0x0000000C,1
 
 [Window][Particle]
-Pos=866,572
+Pos=782,404
 Size=498,427
 Collapsed=0
-DockId=0x0000000C,4
+DockId=0x0000000C,3
 
 [Window][Particle Control]
 Pos=60,60
@@ -104,7 +104,7 @@ Collapsed=0
 DockId=0xC3C5E3D9,3
 
 [Window][Lighting Editor]
-Pos=866,572
+Pos=782,404
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,0
@@ -120,10 +120,10 @@ Collapsed=0
 DockId=0xC3C5E3D9,1
 
 [Window][Emitter]
-Pos=866,572
+Pos=782,404
 Size=498,427
 Collapsed=0
-DockId=0x0000000C,5
+DockId=0x0000000C,4
 
 [Window][EmitterPos]
 Pos=319,578
@@ -137,22 +137,22 @@ Size=830,40
 Collapsed=0
 
 [Window][Player Editor]
-Pos=866,572
-Size=498,427
-Collapsed=0
-DockId=0x0000000C,7
-
-[Window][Weapon Debug]
-Pos=866,572
+Pos=782,404
 Size=498,427
 Collapsed=0
 DockId=0x0000000C,6
 
-[Window][Enemy]
-Pos=866,572
+[Window][Weapon Debug]
+Pos=782,404
 Size=498,427
 Collapsed=0
-DockId=0x0000000C,8
+DockId=0x0000000C,5
+
+[Window][Enemy]
+Pos=782,404
+Size=498,427
+Collapsed=0
+DockId=0x0000000C,5
 
 [Window][Collision Manager Debug]
 Pos=866,572
@@ -193,10 +193,10 @@ Size=532,319
 Collapsed=0
 
 [Window][JsonManager]
-Pos=866,572
+Pos=782,404
 Size=498,427
 Collapsed=0
-DockId=0x0000000C,3
+DockId=0x0000000C,2
 
 [Window][JsonManager - FollowCamera]
 Pos=49,55
@@ -237,13 +237,13 @@ Size=500,410
 Collapsed=0
 
 [Window][UIButton]
-Pos=876,350
+Pos=1043,600
 Size=422,414
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][UISub]
-Pos=876,350
+Pos=1043,600
 Size=422,414
 Collapsed=0
 DockId=0x00000003,1
@@ -261,9 +261,9 @@ DockId=0x00000005,0
 
 [Docking][Data]
 DockNode    ID=0x00000002 Pos=49,55 Size=495,296 Selected=0x656C8C0F
-DockNode    ID=0x00000003 Pos=876,350 Size=422,414 Selected=0xE03A3A95
+DockNode    ID=0x00000003 Pos=1043,600 Size=422,414 Selected=0xE03A3A95
 DockNode    ID=0x00000006 Pos=1043,112 Size=257,106 Selected=0x5ACCD6C9
-DockNode    ID=0x0000000C Pos=866,572 Size=498,427 Selected=0x14F2DE1A
+DockNode    ID=0x0000000C Pos=782,404 Size=498,427 Selected=0x8C00EA1E
 DockSpace   ID=0xAFC85805 Window=0x079D3A04 Pos=0,0 Size=1280,720 Split=Y
   DockNode  ID=0x00000005 Parent=0xAFC85805 SizeRef=1280,111 Selected=0xABD2EB83
   DockNode  ID=0x00000007 Parent=0xAFC85805 SizeRef=1280,607 CentralNode=1
