--- a/.github/workflows/Debug.yml
+++ b/.github/workflows/Debug.yml
@@ -22,6 +22,10 @@ jobs:
         with:
           msbuild-architecture: x64
 
-      - name: Build
+      - name: Build (Verbose)
         run: |
-          msbuild ${{ env.SOLUTION_FILE_PATH }} /p:Platform=x64,Configuration=${{ env.CONFIGURATION }}
+          msbuild ${{ env.SOLUTION_FILE_PATH }} ^
+            /p:Platform=x64 ^
+            /p:Configuration=${{ env.CONFIGURATION }} ^
+            /verbosity:normal ^
+            /consoleloggerparameters:ErrorsOnly;Summary
