--- a/imgui.ini
+++ b/imgui.ini
@@ -95,7 +95,7 @@ Collapsed=0
 
 [Window][MainDockSpace]
 Pos=0,0
-Size=47,32
+Size=1280,720
 Collapsed=0
 
 [Window][Point Light Editor]
@@ -265,8 +265,8 @@ DockNode    ID=0x00000002 Pos=49,55 Size=495,296 Selected=0x656C8C0F
 DockNode    ID=0x00000003 Pos=1043,600 Size=422,414 Selected=0xE03A3A95
 DockNode    ID=0x00000006 Pos=1048,69 Size=257,106 Selected=0x5ACCD6C9
 DockNode    ID=0x00000008 Pos=761,493 Size=498,427 Selected=0x273AB186
-DockNode    ID=0x0000000C Pos=718,193 Size=587,428 Selected=0x14F2DE1A
-DockSpace   ID=0xAFC85805 Window=0x079D3A04 Pos=0,0 Size=32,32 Split=Y
+DockNode    ID=0x0000000C Pos=718,193 Size=587,428 Selected=0xD6D5E0EF
+DockSpace   ID=0xAFC85805 Window=0x079D3A04 Pos=0,0 Size=1280,720 Split=Y
   DockNode  ID=0x00000005 Parent=0xAFC85805 SizeRef=1280,111 Selected=0xABD2EB83
   DockNode  ID=0x00000007 Parent=0xAFC85805 SizeRef=1280,607 CentralNode=1
 DockSpace   ID=0xC3C5E3D9 Pos=576,189 Size=1256,697 Split=Y
