--- a/YoRigine.vcxproj.filters
+++ b/YoRigine.vcxproj.filters
@@ -330,16 +330,16 @@
     <ClCompile Include="Engine\Graphics\PipelineManager\PipelineManager.cpp">
       <Filter>ソース ファイル\NOIR\Graphics\PipelineManager</Filter>
     </ClCompile>
-    <ClCompile Include="Engine\Utility\Collision\BaseCollider.cpp">
+    <ClCompile Include="Engine\Utility\Collision\Core\BaseCollider.cpp">
       <Filter>ソース ファイル\NOIR\Utility\Collision</Filter>
     </ClCompile>
-    <ClCompile Include="Engine\Utility\Collision\CollisionManager.cpp">
+    <ClCompile Include="Engine\Utility\Collision\Core\CollisionManager.cpp">
       <Filter>ソース ファイル\NOIR\Utility\Collision</Filter>
     </ClCompile>
-    <ClCompile Include="Engine\Utility\Collision\ContactRecord.cpp">
+    <ClCompile Include="Engine\Utility\Collision\Core\ContactRecord.cpp">
       <Filter>ソース ファイル\NOIR\Utility\Collision</Filter>
     </ClCompile>
-    <ClCompile Include="Engine\Utility\Collision\Effect.cpp">
+    <ClCompile Include="Engine\Utility\Collision\Core\Effect.cpp">
       <Filter>ソース ファイル\NOIR\Utility\Collision</Filter>
     </ClCompile>
     <ClCompile Include="Engine\Utility\Debugger\ImGuiManager.cpp">
@@ -492,6 +492,12 @@
     <ClCompile Include="Engine\Utility\Collision\OBB\OBBCollider.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Utility\Collision\Core\ColliderFactory.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Utility\Collision\Core\ColliderPool.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Utility\Systems\Input\Input.h">
@@ -593,19 +599,19 @@
     <ClInclude Include="Engine\Utility\Systems\Camera\CameraManager.h">
       <Filter>ヘッダー ファイル\NOIR\Utility\Systems\Camera</Filter>
     </ClInclude>
-    <ClInclude Include="Engine\Utility\Collision\BaseCollider.h">
+    <ClInclude Include="Engine\Utility\Collision\Core\BaseCollider.h">
       <Filter>ヘッダー ファイル\NOIR\Utility\Collision</Filter>
     </ClInclude>
-    <ClInclude Include="Engine\Utility\Collision\CollisionTypeIdDef.h">
+    <ClInclude Include="Engine\Utility\Collision\Core\CollisionTypeIdDef.h">
       <Filter>ヘッダー ファイル\NOIR\Utility\Collision</Filter>
     </ClInclude>
-    <ClInclude Include="Engine\Utility\Collision\Effect.h">
+    <ClInclude Include="Engine\Utility\Collision\Core\Effect.h">
       <Filter>ヘッダー ファイル\NOIR\Utility\Collision</Filter>
     </ClInclude>
-    <ClInclude Include="Engine\Utility\Collision\ContactRecord.h">
+    <ClInclude Include="Engine\Utility\Collision\Core\ContactRecord.h">
       <Filter>ヘッダー ファイル\NOIR\Utility\Collision</Filter>
     </ClInclude>
-    <ClInclude Include="Engine\Utility\Collision\CollisionManager.h">
+    <ClInclude Include="Engine\Utility\Collision\Core\CollisionManager.h">
       <Filter>ヘッダー ファイル\NOIR\Utility\Collision</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Utility\Debugger\LeakChecker.h">
@@ -753,6 +759,12 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Utility\Collision\OBB\OBBCollider.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Utility\Collision\Core\ColliderFactory.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Utility\Collision\Core\ColliderPool.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
