--- a/imgui.ini
+++ b/imgui.ini
@@ -141,19 +141,19 @@ Collapsed=0
 Pos=736,200
 Size=587,428
 Collapsed=0
-DockId=0x0000000C,6
+DockId=0x0000000C,5
 
 [Window][Weapon Debug]
 Pos=736,200
 Size=587,428
 Collapsed=0
-DockId=0x0000000C,5
+DockId=0x0000000C,4
 
 [Window][Enemy]
 Pos=736,200
 Size=587,428
 Collapsed=0
-DockId=0x0000000C,4
+DockId=0x0000000C,6
 
 [Window][Collision Manager Debug]
 Pos=866,572
@@ -265,7 +265,7 @@ DockNode    ID=0x00000002 Pos=49,55 Size=495,296 Selected=0x656C8C0F
 DockNode    ID=0x00000003 Pos=1043,600 Size=422,414 Selected=0xE03A3A95
 DockNode    ID=0x00000006 Pos=1048,69 Size=257,106 Selected=0x5ACCD6C9
 DockNode    ID=0x00000008 Pos=761,493 Size=498,427 Selected=0x273AB186
-DockNode    ID=0x0000000C Pos=736,200 Size=587,428 Selected=0x9D3EAE6C
+DockNode    ID=0x0000000C Pos=736,200 Size=587,428 Selected=0x14F2DE1A
 DockSpace   ID=0xAFC85805 Window=0x079D3A04 Pos=0,0 Size=32,32 Split=Y
   DockNode  ID=0x00000005 Parent=0xAFC85805 SizeRef=1280,111 Selected=0xABD2EB83
   DockNode  ID=0x00000007 Parent=0xAFC85805 SizeRef=1280,607 CentralNode=1
