--- a/YoRigine.vcxproj.filters
+++ b/YoRigine.vcxproj.filters
@@ -767,6 +767,9 @@
     <ClInclude Include="Engine\Utility\Collision\Core\ColliderPool.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Engine\Utility\Collision\Core\CollisionDirection.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\shaders\Particle.hlsli" />
