--- a/imgui.ini
+++ b/imgui.ini
@@ -45,14 +45,14 @@ Size=177,96
 Collapsed=0
 
 [Window][Camera Mode]
-Pos=17,0
-Size=15,34
+Pos=0,0
+Size=1280,202
 Collapsed=0
 DockId=0x0000000C,1
 
 [Window][Particle]
-Pos=17,0
-Size=15,34
+Pos=0,0
+Size=1280,202
 Collapsed=0
 DockId=0x0000000C,3
 
@@ -94,7 +94,7 @@ Collapsed=0
 
 [Window][MainDockSpace]
 Pos=0,0
-Size=47,32
+Size=1280,720
 Collapsed=0
 
 [Window][Point Light Editor]
@@ -104,8 +104,8 @@ Collapsed=0
 DockId=0xC3C5E3D9,3
 
 [Window][Lighting Editor]
-Pos=17,0
-Size=15,34
+Pos=0,0
+Size=1280,202
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -120,8 +120,8 @@ Collapsed=0
 DockId=0xC3C5E3D9,1
 
 [Window][Emitter]
-Pos=17,0
-Size=15,34
+Pos=0,0
+Size=1280,202
 Collapsed=0
 DockId=0x0000000C,4
 
@@ -149,8 +149,8 @@ Collapsed=0
 DockId=0x0000000C,4
 
 [Window][Enemy]
-Pos=17,0
-Size=15,34
+Pos=0,0
+Size=1280,202
 Collapsed=0
 DockId=0x0000000C,5
 
@@ -161,7 +161,7 @@ Collapsed=0
 DockId=0x0000000C,1
 
 [Window][FPS]
-Pos=459,276
+Pos=875,639
 Size=257,106
 Collapsed=0
 DockId=0x00000006,1
@@ -193,8 +193,8 @@ Size=532,319
 Collapsed=0
 
 [Window][JsonManager]
-Pos=17,0
-Size=15,34
+Pos=0,0
+Size=1280,202
 Collapsed=0
 DockId=0x0000000C,2
 
@@ -262,12 +262,12 @@ DockId=0x00000005,0
 [Docking][Data]
 DockNode      ID=0x00000002 Pos=49,55 Size=495,296 Selected=0x656C8C0F
 DockNode      ID=0x00000003 Pos=49,533 Size=422,648 Selected=0xE03A3A95
-DockNode      ID=0x00000006 Pos=459,276 Size=257,106 Selected=0x54CE7037
-DockSpace     ID=0xAFC85805 Window=0x079D3A04 Pos=0,0 Size=32,34 Split=X
-  DockNode    ID=0x00000008 Parent=0xAFC85805 SizeRef=1032,720 Split=Y
+DockNode      ID=0x00000006 Pos=875,639 Size=257,106 Selected=0x54CE7037
+DockSpace     ID=0xAFC85805 Window=0x079D3A04 Pos=0,0 Size=1280,720 Split=Y
+  DockNode    ID=0x0000000C Parent=0xAFC85805 SizeRef=1280,202 Selected=0x8DD1DBAE
+  DockNode    ID=0x00000008 Parent=0xAFC85805 SizeRef=1280,516 Split=Y
     DockNode  ID=0x00000005 Parent=0x00000008 SizeRef=1280,111 Selected=0xABD2EB83
     DockNode  ID=0x00000007 Parent=0x00000008 SizeRef=1280,607 CentralNode=1
-  DockNode    ID=0x0000000C Parent=0xAFC85805 SizeRef=246,720 Selected=0xD6D5E0EF
 DockSpace     ID=0xC3C5E3D9 Pos=576,189 Size=1256,697 Split=Y
   DockNode    ID=0x00000004 Parent=0xC3C5E3D9 SizeRef=1264,391 CentralNode=1 Selected=0x744B41B5
   DockNode    ID=0x00000001 Parent=0xC3C5E3D9 SizeRef=1264,327 Selected=0x5BD5222E
