--- a/YoRigine.vcxproj.filters
+++ b/YoRigine.vcxproj.filters
@@ -501,6 +501,9 @@
     <ClCompile Include="Engine\Graphics\Culling\OcclusionCullingManager.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Generators\Object3D\ObjectInstance.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Utility\Systems\Input\Input.h">
@@ -774,6 +777,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Graphics\Culling\OcclusionCullingManager.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Generators\Object3D\ObjectInstance.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
